<resources>
    <string name="app_name">Agenda</string>
    <string name="action_settings">Configurações</string>
    <string name="action_refresh">Atualizar</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login/register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_name">Nome</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Cadastre-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Esse e-mail é inválido</string>
    <string name="error_invalid_password">Essa senha é muito curta</string>
    <string name="error_incorrect_password">Credenciais Inválidas</string>
    <string name="error_email_exists">Esse e-mail já está cadastrado.</string>
    <string name="error_field_required">Preencha esse campo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Cadastre-se</string>

    <string name="prompt_compromisso">Compromisso</string>
    <string name="prompt_data">Data</string>
    <string name="prompt_hora">Hora</string>
    <string name="prompt_local">Local</string>
    <string name="action_novo_compromisso">Criar Compromisso</string>
    <string name="action_atualizar_compromisso">Atualizar Compromisso</string>
    <string name="action_edit_compromisso">Editar</string>
    <string name="action_delete_compromisso">Excluir</string>

    <string name="activity_compromisso">Compromisso</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_notifications">Notificações</string>
    <string name="pref_title_new_message_notifications">Antecedência das Notificações</string>
    <string name="pref_notify_key">notify_time</string>
    <string-array name="pref_notificacao_titles">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>20 minutos</item>
        <item>25 minutos</item>
        <item>30 minutos</item>
        <item>45 minutos</item>
        <item>1 hora</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_notificacao_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>-1</item>
    </string-array>

</resources>
