<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rossetto.organizer.RegisterActivity">

    <ProgressBar
        android:id="@+id/view_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/compromisso"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/view_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_compromisso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_compromisso"
                android:textSize="20dp"
                android:textStyle="bold"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_data"
                    android:focusableInTouchMode="false"
                    android:layout_marginTop="15dp"
                    android:textSize="16dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textview_hora"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:hint="@string/prompt_hora"
                    android:layout_marginTop="15dp"
                    android:textSize="16dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/textview_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_local"
                android:layout_marginTop="15dp"
                android:textSize="16dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/compromisso_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:background="@color/colorAccent"
                android:text="@string/action_edit_compromisso"
                android:textStyle="bold" />

            <Button
                android:id="@+id/compromisso_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:background="@color/colorAccent"
                android:text="@string/action_delete_compromisso"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
